# test

SC_FAST_LIVO2/: CMakeLists.txt  CMakeLists.txt.backup  README.md  generate_tree.py  guidance.txt  hilti_solution.txt  log.txt  package.xml
SC_FAST_LIVO2/Log/result/: exp01_construction_ground_level_0.1_0.9.txt  exp21_outside_building.txt
SC_FAST_LIVO2/config/: HILTI22.yaml  avia.yaml
SC_FAST_LIVO2/include/: IMU_Processing.h  LIVMapper.h  vio.h  voxel_map.h
SC_FAST_LIVO2/include/utils/: types.h
SC_FAST_LIVO2/launch/: mapping_avia.launch  mapping_avia_direct.launch  mapping_hesaixt32_hilti22.launch  mapping_with_pgo.launch
SC_FAST_LIVO2/rviz_cfg/: fast_livo2.rviz
SC_FAST_LIVO2/src/: LIVMapper.cpp  main.cpp  vio.cpp  voxel_map.cpp
